<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#F3DEBF"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarHeight"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:paddingRight="8dp"
            android:src="@drawable/btn_back"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/file_chooser_select_file"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tvCurPath"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#DBBF95"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/space10dp"
        android:text="@string/file_chooser_mc_path"
        android:textColor="#5E4F38"
        android:textSize="@dimen/textSize12Sp"/>

    <TextView
        android:id="@+id/tvBackLast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableLeft="@mipmap/ic_file_back"
        android:gravity="center_vertical"
        android:text="@string/file_chooser_back_last"
        android:textSize="@dimen/textSize18Sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/boldLineH"
        android:background="#D7C2A5"/>

    <ListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="#D7C2A5"
        android:dividerHeight="@dimen/boldLineH"
        android:overScrollMode="never"/>

    <TextView
        android:id="@+id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/file_chooser_not_type_file"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"/>

    <FrameLayout
        android:id="@+id/flConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F9EFE0">

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space8dp"
            android:layout_marginLeft="@dimen/space12dp"
            android:layout_marginRight="@dimen/space12dp"
            android:layout_marginTop="@dimen/space8dp"
            android:background="@drawable/btn_main_confirm"
            android:text="@string/my_map_import"/>

    </FrameLayout>

</LinearLayout>