<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="CreateMapViewModel"
            type="com.sandboxol.mapeditor.view.fragment.createmap.CreateMapViewModel"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space10dp"
        android:layout_marginLeft="@dimen/space18dp"
        android:layout_marginRight="@dimen/space18dp"
        android:layout_marginTop="@dimen/space20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TitleText14sp"
                android:layout_width="2dp"
                android:background="@color/color_title_text"/>

            <TextView
                style="@style/TitleText14sp"
                android:layout_marginLeft="3dp"
                android:text="@string/new_map_select_land"/>

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            bind:checkId="@{CreateMapViewModel.mapLandCheck}"
            bind:onCheckCommand="@{CreateMapViewModel.onMapLandChangeCommand}">

            <RadioButton
                android:id="@+id/rbSuperFlat"
                style="@style/SelectLandRadioButtonStyle"
                android:text="@string/new_map_super_flat"/>

            <RadioButton
                android:id="@+id/rbSkyLand"
                style="@style/SelectLandRadioButtonStyle"
                android:text="@string/new_map_sky_land"/>

            <RadioButton
                android:id="@+id/rbImportLocal"
                style="@style/SelectLandRadioButtonStyle"
                android:text="@{CreateMapViewModel.importMapName}"/>

        </RadioGroup>

    </LinearLayout>

</layout>