<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_content"
            android:orientation="vertical">

            <com.sandboxol.mapeditor.view.widget.XEditText
                android:id="@+id/etName"
                style="@style/ClearEditTextStyle"
                android:layout_marginBottom="27dp"
                android:layout_marginLeft="@dimen/space10dp"
                android:layout_marginRight="@dimen/space10dp"
                android:layout_marginTop="27dp"
                android:hint="@string/editor_map_rename_hint"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/boldLineH"
                android:background="@color/color_line"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    style="@style/DialogButtonStyle"
                    android:background="@drawable/btn_dialog_cancel_left"
                    android:text="@string/cancel"
                    android:textColor="@color/color_content"/>

                <View
                    android:layout_width="@dimen/boldLineH"
                    android:layout_height="match_parent"
                    android:background="@color/color_line"/>

                <Button
                    android:id="@+id/btnConfirm"
                    style="@style/DialogButtonStyle"
                    android:background="@drawable/btn_dialog_confirm_right"
                    android:text="@string/map_save"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>