<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="MainViewModel"
            type="com.sandboxol.mapeditor.view.activity.main.MainViewModel"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        tools:context="com.sandboxol.mapeditor.view.activity.main.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/actionBarHeight"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize18Sp"/>

            <com.sandboxol.mapeditor.view.widget.CheckMcView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/mainBgColor">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.sandboxol.mapeditor.view.widget.MainItemView
                        style="@style/MainItemViewStyle"
                        android:layout_marginTop="@dimen/space9dp"
                        bind:backgroundRes="@drawable/bg_main_start_editor"
                        bind:onClickCommand="@{MainViewModel.onStartEditorClick}"
                        bind:title="@string/main_start_editor"/>

                    <com.sandboxol.mapeditor.view.widget.MainItemView
                        style="@style/MainItemViewStyle"
                        bind:backgroundRes="@drawable/bg_main_my_map"
                        bind:onClickCommand="@{MainViewModel.onMyMapClick}"
                        bind:title="@string/main_my_map"/>

                </LinearLayout>

            </android.support.v4.widget.NestedScrollView>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>

