<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="CheckAppVersionDialogViewModel"
            type="com.sandboxol.mapeditor.view.dialog.CheckAppVersionDialog.CheckAppVersionDialogViewModel"/>

        <import type="android.view.View"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:visibility="@{CheckAppVersionDialogViewModel.isShowPic ? View.VISIBLE : View.GONE}"
                bind:uri="@{CheckAppVersionDialogViewModel.picUrl}"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="19dp"
                android:text="@string/dialog_check_app_version_content"
                android:textColor="@color/color_dialog_content_text"
                android:textSize="@dimen/textSize15Sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="19dp"
                android:text="@{CheckAppVersionDialogViewModel.updateText}"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/boldLineH"
                android:background="@color/color_line"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="46dp">

                <Button
                    style="@style/DialogButtonStyle"
                    android:background="@drawable/btn_dialog_cancel_left"
                    android:text="@string/cancel"
                    android:textColor="@color/color_content"
                    android:visibility="@{CheckAppVersionDialogViewModel.isMandatory ? View.GONE : View.VISIBLE}"
                    bind:onClickCommand="@{CheckAppVersionDialogViewModel.onClickCancelCommand}"/>

                <View
                    android:layout_width="@dimen/boldLineH"
                    android:layout_height="match_parent"
                    android:background="@color/color_line"
                    android:visibility="@{CheckAppVersionDialogViewModel.isMandatory ? View.GONE : View.VISIBLE}"/>

                <Button
                    android:id="@+id/btnConfirm"
                    style="@style/DialogButtonStyle"
                    android:background="@drawable/btn_dialog_confirm_right"
                    android:text="@string/dialog_button_update"
                    bind:onClickCommand="@{CheckAppVersionDialogViewModel.onClickUpdateCommand}"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>